Update Navbar Style

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome to our Home Page</h1>
+<div class="home-callout text-center container-fluid">
+  <h1>Welcome to our Home Page</h1>
+</div>
