--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 <div class="home-callout text-center container-fluid">
   <h1>Welcome to our Home Page</h1>
+  <h3>A Great Place to Think About Doing Great Things</h3>
 </div>
