--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,11 @@
 .navbar {
   border: none;
 }
+.navbar-brand {
+  font-family: 'Open Sans', sans-serif;
+  font-weight:800;
+}
+
 
 // navbar style
 .navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
